Bug 88485 - unable to select the right column characters in catalog table on math editor
Summary: unable to select the right column characters in catalog table on math editor
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
4.3.5.2 release
Hardware: x86 (IA32) All
: medium minor
Assignee: Takeshi Abe
URL:
Whiteboard: target:5.2.0 target:5.1.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-01-16 08:46 UTC by hgoto
Modified: 2016-10-25 19:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
catalog table just select %MU (77.93 KB, image/jpeg)
2015-01-18 08:11 UTC, hgoto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hgoto 2015-01-16 08:46:05 UTC
The character table of catalog in math editor seems to be shown properly. But I cannot select the only right edge column characters in the catalog table by mouse click.
Comment 1 Buovjaga 2015-01-17 14:48:26 UTC
I'd like to see a screenshot, where you have marked the problem.

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided the screenshot.
Comment 2 hgoto 2015-01-18 08:11:05 UTC
Created attachment 112413 [details]
catalog table just select %MU

Thanks response.
I upload the screen shot, where I can select %LAMBDA by mouse click but unable to select %MU by mouse click ( %MU was input by direct edit in it)
Comment 3 Buovjaga 2015-01-18 11:01:06 UTC
Thanks!

The catalog can be found from Tools - Catalog.
I found that one can select the rightmost symbols, but the target area is on the left side of each icon.
They can be selected with the keyboard (arrow keys).
I'm lowering severity because of these workarounds.

The problem is not present in 3.5.0.
The problem on Linux LibO 4.5 did not occur with every rightmost symbol.

Added bibisectRequest.

Win 7 Pro 64-bit Version: 4.3.6.1
Build ID: 9629686a67dd1f357477c13325e45a66f3452bb9

Version: 4.5.0.0.alpha0+
Build ID: 5f6bdce0c0ac687f418821ce328f2987bf340cda
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-01-17_01:06:46

Ubuntu 14.10 64-bit Version: 4.5.0.0.alpha0+
Build ID: 0ffa3abc7d6c0437ece30cfb1430d28ffcc9f5c1
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-01-15_22:47:16

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 4 Matthew Francis 2015-02-16 13:57:46 UTC
It appears this was introduced with the ui conversion

commit d484b12a851df24b2c5779b73c231a20a55a0374
Author: Alia Almusaireae <almusaireae@kacst.edu.sa>
Date:   Mon May 20 10:27:27 2013 +0300

    catalog.ui widget
    
    Change-Id: I1a67c1c9b30b56d3c0739c2f77abfc24a941dad4
Comment 5 Takeshi Abe 2015-09-16 02:37:54 UTC
I cannot reproduce this issue with LibO 5.0.1.2, Win 7 x86-64 version,
nor with LibO 4.4.0.3, Mac OS X 10.9.5.

Could you try LibO 5.0 or LibO 4.4?
Comment 6 hgoto 2015-09-16 06:01:45 UTC
This problem still appears in L.O. 4.4.5.2 and L.O. 5.0.2.1 on Win7 32bits.
Comment 7 Buovjaga 2015-09-17 11:45:08 UTC
Still confirmed.

Win 7 Pro 64-bit, Version: 5.0.1.2 (32-bit)
Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Locale: fi-FI (fi_FI)
Comment 8 Robinson Tryon (qubit) 2015-12-13 11:12:04 UTC Comment hidden (obsolete)
Comment 9 Takeshi Abe 2016-03-11 10:04:54 UTC
OK, I finally reproduced this issue with LibO 5.1.1.3 (x86) on Win7.

Anyway it happens only when I has chosen "Windows Classic" theme.
Clicking a rightmost symbol works well with "Windows 7 Basic" or some other themes.
Could anyone confirm?
Comment 10 Commit Notification 2016-03-11 12:24:31 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e7e1d50fc0c8077be9d9603eab8ef86098c9aa24

Resolves tdf#88485: Allow to select rightmost symbols in the dialog

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2016-03-12 21:19:55 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=46dac6598b066a43db851a5764778cfa1207e97d&h=libreoffice-5-1

Resolves tdf#88485: Allow to select rightmost symbols in the dialog

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 hgoto 2016-03-31 02:04:37 UTC
I confirmed that this problem disappears in LibreOffice 5.1.2.2 on win7(x64 and x86).
This problem seems to be fixed well, thanks to all.