Resolves tdf#88485: Allow to select rightmost symbols in the dialog

by adjusting target area with proper offsets.

Change-Id: I66100c898354909623991c3af3e78287d6f5a9a0
Reviewed-on: https://gerrit.libreoffice.org/23147
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit e7e1d50fc0c8077be9d9603eab8ef86098c9aa24)